--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         
         <h3>F.A.Q.</h3>
         <p>Q: The start button is not active. What should I do?<br>
-           A: Select the required task and click "Active" in the "Task" menu.</p>
+           A: Select the required task and click "Activate" in the "Task" menu.</p>
         
         <h3>News</h3>       
         <h4>Version 0.1.2</h4>
