--- a/index.html
+++ b/index.html
@@ -46,8 +46,13 @@
         <h3>F.A.Q.</h3>
         <p>Q: The start button is not active. What should I do?<br>
            A: Select the required task and click "Activate" in the "Task" menu.</p>
+
         
         <h3>News</h3>       
+        <h4>Version 0.2.0</h4>
+        <ul>
+            <li>code refactoring</li>
+        </ul>
         <h4>Version 0.1.3</h4>
         <ul>
             <li>first public release</li>
