--- a/ru.html
+++ b/ru.html
@@ -47,7 +47,11 @@
         <p>Q: Кнопка запуска задачи не активна. Что делать?<br>
            A: Сперва выделите нужную задачу, а затем выберите пункт "Активировать" в меню "Задача"</p>
         
-        <h3>Новости</h3>       
+        <h3>Новости</h3>
+        <h4>Версия 0.2.0</h4>
+        <ul>
+            <li>переработка кода программы</li>
+        </ul>
         <h4>Версия 0.1.3</h4>
         <ul>
             <li>первый публичный релиз</li>
