--- a/ru.html
+++ b/ru.html
@@ -86,7 +86,7 @@
           <p>
             You should have received a copy of the GNU General Public License
             along with this program.  If not, see 
-            <a href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>.
+            <a href="https://www.gnu.org/licenses/">https://www.gnu.org/licenses/</a>.
           </p>
           <p>
             The complete text of the GNU General
